--- a/logging.conf
+++ b/logging.conf
@@ -34,7 +34,7 @@ args=(sys.stdout,)
 
 #============================ loggers =========================================
 [loggers]
-keys=root,moteData,MoteConnector
+keys=root,moteData,CoAPObserve
 
 [logger_root]
 level=DEBUG
@@ -46,10 +46,10 @@ propagate=0
 handlers=std,console
 qualname=moteData
 
-[logger_MoteConnector]
+[logger_CoAPObserve]
 level=DEBUG
 propagate=0
 handlers=std,console
-qualname=MoteConnector
+qualname=CoAPObserve
 
 
