--- a/logging.conf
+++ b/logging.conf
@@ -34,7 +34,7 @@ args=(sys.stdout,)
 
 #============================ loggers =========================================
 [loggers]
-keys=root,moteData,CoAPObserve
+keys=root,moteData,CoAPObserve,AllPost,AutoObserve,REST_CoAP
 
 [logger_root]
 level=DEBUG
@@ -52,4 +52,21 @@ propagate=0
 handlers=std,console
 qualname=CoAPObserve
 
+[logger_AllPost]
+level=DEBUG
+propagate=0
+handlers=std,console
+qualname=AllPost
+
+[logger_AutoObserve]
+level=DEBUG
+propagate=0
+handlers=std,console
+qualname=AutoObserve
+
+[logger_REST_CoAP]
+level=DEBUG
+propagate=0
+handlers=std,console
+qualname=REST_CoAP
 
